<resources>
    <string name="app_name">铜钱猫</string>
    <string name="vehicle_EvaluationLoan">车辆评估贷款</string>
    <string name="vehicle_proposer">申请人</string>
    <string name="vehicle_contactay">联系方式</string>
    <string name="vehicle_city">城市</string>
    <string name="vehicle_brand">品牌</string>
    <string name="vehicle_price">购买价格</string>
    <string name="vehicle_firstRegistration">首次上牌</string>
    <string name="vehicle_mileage">行驶里程</string>
    <string name="vehicle_carId">车牌号</string>
    <string name="vehicle_use">车辆用途</string>
    <string name="vehicle_condition">车况</string>
    <string name="vehicle_models">车型</string>
    <string name="home">首页</string>
    <string name="lawHelp">法律援助</string>
    <string name="institutionsIn">机构中心</string>
    <string name="catHome">猫舍</string>
    <string name="bankFinancing">银行理财</string>
    <string name="bFinancalRecommendations">理财推荐</string>
    <string name="all">全部</string>
    <string name="mostFocus">关注最多</string>
    <string name="screening">筛选</string>
    <string name="bankActivity">金融活动</string>
    <string name="bankActivity_pageView">浏览量</string>
    <string name="bankActivity_focus">关注</string>
    <string name="bankActivity_organizationScreen">机构</string>
    <string name="bankloan">金融贷款</string>
    <string name="lookMore">更多</string>
    <string name="loanYearRate">贷款月利率</string>
    <string name="money_tv">金额</string>
    <string name="deadline_tv">期限</string>
    <string name="bankInfromations">资讯</string>
    <string name="hotInfromations">热点资讯</string>
    <string name="moneyInfromations">金融课堂</string>
    <string name="home_hotActivity_tv1">关注有豪礼</string>
    <string name="home_hotActivity_tv2">分享有惊喜</string>
    <string name="home_hotActivity_tv3">宝宝你快来</string>
    <string name="pullRefresh">下拉刷新</string>
    <string name="loading">加载中...</string>
    <string name="releaseRefresh">释放刷新</string>
    <string name="PullLoading">上拉加载</string>
    <string name="releaseLoading">释放加载</string>
    <string name="demo_name_poi">POI搜索功能</string>
    <string name="demo_title_poi">POI搜索功能--POISearchDemo</string>
    <string name="demo_desc_poi">介绍关键词查询、suggestion查询和查看餐饮类Place详情页功能</string>
    <string name="nextPage">下一页</string>
    <string name="previousPage">上一页</string>
    <string name="filter_content">请输入查询内容</string>
    <string name="filter_institution">机构查询</string>
    <string name="filter_bankQuery">银行查询</string>
    <string name="filter_productType">产品类型</string>
    <string name="filter_riskGrade">风险等级</string>
    <string name="filter_investmentModel">投资模式</string>
    <string name="filter_issuingCity">发行地区</string>
    <string name="filter_hintIssuingCity">请输入发行地区</string>
    <string name="filter_investmentTermInterval">投资期限</string>
    <string name="filter_redeemable">可赎回</string>
    <string name="filter_notRedeemable">不可赎回</string>
    <string name="filter_loanType">贷款类型</string>
    <string name="filter_crowd">适用人群</string>
    <string name="filter_hintCrowd">请输入适用人群</string>
    <string name="filter_loanMoneyInterval">贷款金额</string>
    <string name="filter_loanTermInterval">贷款期限</string>
    <string name="filter_rateInterval">贷款利率</string>
    <string name="units_rateInterval">%</string>
    <string name="units_month">月</string>
    <string name="units_day">天</string>
    <string name="units_miriade">万</string>
    <string name="hasCarValue">有车产</string>
    <string name="unhasCarValue">无车产</string>
    <string name="hasHouserValue">有房产</string>
    <string name="unhasHouseValue">无房产</string>
    <string name="identity_officeWorker">上班族</string>
    <string name="identity_businessOwners">企业主</string>
    <string name="identity_soho">个体户</string>
    <string name="identity_freelance">自由职业</string>
    <string name="identity_annualIncome">年收入</string>
    <string name="identity_businessIncome">公司流水</string>
    <string name="identity_monthIncome">税后月薪</string>
    <string name="loan_use">贷款用途</string>
    <string name="title_activity_demo">demo</string>
</resources>