<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/white"
    >

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:paddingBottom="@dimen/smallmdp"
        android:paddingTop="@dimen/smallmdp"
        android:background="?android:selectableItemBackground"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.4"
            android:orientation="vertical"
            android:layout_marginLeft="5dp"
            >
            <TextView
                android:id="@+id/annualReturn_tv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="4.0%"
                android:textSize="@dimen/mediumsp"
                android:textColor="@color/home_orange"
                android:gravity="center_horizontal|bottom"
                />
            <TextView
                android:id="@+id/rateName_tv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="@dimen/tinysp"
                android:text="@string/loanYearRate"
                android:textColor="@color/home_hotActivity_gray6"
                android:gravity="center_horizontal"
                />


        </LinearLayout>
        <View
            android:layout_width="1px"
            android:layout_height="@dimen/hugehxxdp"
            android:layout_marginBottom="@dimen/tinymdp"
            android:layout_marginTop="@dimen/tinymdp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/smallmdp"
            android:background="@color/home_hotActivity_gray9"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="2"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    style="@style/sty_title_tv"
                    android:gravity="center_vertical"
                    android:id="@+id/title_tv"/>
                <LinearLayout
                    android:id="@+id/purchaseMoneyAndRiskGradeName_linear"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:gravity="center_vertical"
                    android:layout_weight="1">
                    <LinearLayout
                        android:id="@+id/purchaseMoney_linear"
                        android:layout_width="0dp"
                        android:layout_weight="1.3"
                        android:layout_height="match_parent"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/money_tv"
                            android:textSize="@dimen/smallsp"
                            android:gravity="center_vertical"
                            android:textColor="@color/home_hotActivity_gray3"
                            />
                        <TextView
                            android:id="@+id/purchaseMoney_tv"
                            style="@style/listitemLayout_tv"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/investmentTerm_linear"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/deadline_tv"
                            android:textSize="@dimen/smallsp"
                            android:gravity="center_vertical"
                            android:textColor="@color/home_hotActivity_gray3"
                            />
                        <TextView
                            android:id="@+id/investmentTerm_tv"
                            style="@style/listitemLayout_tv"

                            />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:orientation="horizontal"
                    >
                    <LinearLayout
                        android:id="@+id/institutionName_linear"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.3"
                        >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/institution1"
                            android:scaleX="0.7"
                            android:scaleY="0.7"
                            android:paddingRight="5dp"
                            android:id="@+id/imageView"/>

                        <TextView
                            android:id="@+id/institutionName_tv"
                            style="@style/listitemLayout_tv"
                            android:textSize="@dimen/tinysp"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/financViews_linear"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        >
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/eye3"
                            android:paddingLeft="2dp"
                            android:scaleX="0.8"
                            android:scaleY="0.8"
                            android:scaleType="centerInside"
                            android:adjustViewBounds="true"
                            android:paddingRight="5dp"
                            />
                        <TextView
                            android:id="@+id/financViews_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            style="@style/listitemLayout_tv"
                            android:textSize="@dimen/tinysp"
                            />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</LinearLayout>